Aggiunta la visualizzazione del login Inseriti placeholders in main.hbr

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,11 +1,20 @@
+<!-- Main renderer -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EventHub</title>
+    
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/{{style}}"/>
+
+    <script type="application/javascript" src="js/bootstrap.min.js"></script>
+    <script type="application/javascript" src="js/bootstrap.bundle.min.js"></script>
+    <script type="application/javascript" src="js/{{js}}"></script>
+
+    <title>{{title}}</title>
 </head>
-<body>
-    {{{body}}}
-</body>
+
+{{{body}}}
+
 </html>
