--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -23,7 +23,7 @@
                 </a>
                 <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
                     <li><a class="dropdown-item" href="#">Impostazioni</a></li>
-                    <li><a class="dropdown-item" href="pages/login.html">Il mio profilo</a></li>
+                    <li><a class="dropdown-item" href="login">Il mio profilo</a></li>
                     <li>
                         <hr class="dropdown-divider">
                     </li>
