--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,7 +2,7 @@
 <body class="text-center">
     <form action="" class="form-signin" method="post" name="form-login" onsubmit="validaForm()">
         <a href="/">
-            <img class="mb-4" src="img/favicon-32x32.png" width="72"/>
+            <img class="mb-4" src="img/favicon-32x32.png" width="215" height="60"/>
         </a>
         <h1 class="h3 mb-3 font-weight-normal">Effettua il login</h1>
         <input type="email" name="inputEmail" class="form-control" placeholder="Email" required autofocus/>
