Icona resa trasparente. Altri aggiustamenti su icone

--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -4,7 +4,8 @@
 
     <a href="/"
         class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-        <img src="img/favicon-32x32.png" alt="home" width="107" height="30" class="rounded-3">
+        <!-- Aspetto dell'immagine originale: 3.66:1 -->
+        <img src="img/icon-transparent.png" alt="home" width="150" height="41" class="">
     </a>
 
     <ul class="nav col-md-4 justify-content-end px-4">
