--- a/public/css/style-signin.css
+++ b/public/css/style-signin.css
@@ -1,3 +1,7 @@
+:root {
+  --theme-color: rgba(24, 192, 46, 0.534);
+}
+
 html,
 body {
   height: 100%;
@@ -39,5 +43,7 @@ body {
 }
 
 .btn {
-  background-color: blueviolet;
+  background-color: var(--theme-color);
+  color: black;
+  border-color: transparent;
 }
