--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -2,8 +2,9 @@
 <header class="p-3 mb-3 border-bottom">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="#" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none me-lg-3">
-                <img src="img/favicon-32x32.png" alt="home" width="107" height="30" class="rounded-3">
+            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none me-lg-3">
+                <!-- Aspetto dell'immagine originale: 3.66:1 -->
+                <img src="img/icon-transparent.png" alt="home" width="120" height="33" class="">
             </a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
