--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,1 +1,59 @@
-<!-- Usare il foglio di stile style-signup.css per tutti gli stili usati -->
+<!-- Button to open the modal -->
+<button onclick="document.getElementById('id01').style.display='block'">Sign Up</button>
+
+<!-- The Modal (contains the Sign Up form) -->
+<div id="id01" class="modal">
+  <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal"></span>
+  <form class="modal-content" action="/action_page.php">
+    <div class="container">
+      <h1>Sign Up</h1>
+      <p>Compilare il form per creare un nuovo account</p>
+      <hr>
+
+      <label for="email"><b>Email</b></label>
+      <input type="text" placeholder="inserire email" name="email" required>
+      <!--problema di visualizzazione per type email su opera gx, da verificare  -->
+
+      <label for="CF"><b>CF</b></label>
+      <input type="text" placeholder="inserire CF" name="CF"
+        pattern="^[a-zA-Z]{6}[0-9]{2}[a-zA-Z][0-9]{2}[a-zA-Z][0-9]{3}[a-zA-Z]$" required>
+
+      <label for="name"><b>name</b></label>
+      <input type="text" placeholder="inserire name" name="name" required>
+
+      <label for="cognome"><b>cognome</b></label>
+      <input type="text" placeholder="inserire cognome" name="cognome" required>
+
+      <label for="dataNascita"><b>Data di nascita</b></label>
+      <input type="date" placeholder="inserire data" name="dataNascita" required>
+
+      <b>
+      </b>
+
+      <label for="sesso"><b>Sesso</b></label>
+      <input type="text" placeholder="inserire sesso " name="sesso" onkeyup='checksex();' required>
+
+
+
+      <label for="psw"><b>Password</b></label>
+
+      <input type="password" placeholder="inserire Password" name="psw" id="password" onkeyup='checkLgh();' required>
+
+      <label for="psw-repeat"><b>Repeat Password</b></label>
+      <input type="password" placeholder="ripetere Password" name="psw-repeat" id="password_repeat" onkeyup='check();'
+        required>
+      <span id='message'></b></span>
+      <label>
+        <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+      </label>
+
+      <p>Creando un account accetti <a href="#" style="color:dodgerblue">Termini e Condizioni</a>.</p>
+
+      <div class="clearfix">
+        <button type="button" onclick="document.getElementById('id01').style.display='none'"
+          class="cancelbtn">Cancel</button>
+        <button type="submit" class="signup">Sign Up</button>
+      </div>
+    </div>
+  </form>
+</div>
