aggiunto tasto per signup

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -24,6 +24,7 @@
                 <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
                     <li><a class="dropdown-item" href="#">Impostazioni</a></li>
                     <li><a class="dropdown-item" href="login">Il mio profilo</a></li>
+                    <li><a class="dropdown-item" href="signup">Crea account</a></li>
                     <li>
                         <hr class="dropdown-divider">
                     </li>
