terminate le funzioni per psw visibile

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -40,7 +40,7 @@
 
         <input type="password" placeholder="inserire Password" name="psw" id="password" onkeyup='checkLgh();' required>
         <label>
-          <input type="checkbox" name="showPsw" style="margin-bottom:15px" onclick="funshowPsw"> mostra
+          <input type="checkbox" name="showPsw" id="showPassword" style="margin-bottom:15px" onclick="funshowPsw()" > mostra
         </label>
       </p>
 
@@ -51,7 +51,7 @@
         required>
 
             <label>
-          <input type="checkbox" name="showPsw2" style="margin-bottom:15px" onclick="funshowPsw2"> mostra
+          <input type="checkbox" name="showPsw2" style="margin-bottom:15px" onclick="funshowPsw2()"> mostra
         </label>
 
       </p>
