--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -26,13 +26,13 @@
 
       <label for="dataNascita"><b>Data di nascita</b></label>
       <input type="date" placeholder="inserire data" name="dataNascita" required>
+       
+       <!--sesso-->
 
-      <b>
-      </b>
-
+      <p>
       <label for="sesso"><b>Sesso</b></label>
       <input type="text" placeholder="inserire sesso " name="sesso" onkeyup='checkSex' required>
-
+      </p>
       <!--password-->
 
       <p>
@@ -55,8 +55,9 @@
         </label>
 
       </p>
+      <p>
       <span id='message'></b></span>
-
+      </p>
       <!--remember me-->
 
       <label>
