fixed function for db sex domain {inserire M = maschio, F = femmina, N = non binario, U = non definito}

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -31,7 +31,7 @@
 
       <p>
       <label for="sesso"><b>Sesso</b></label>
-      <input type="text" placeholder="inserire sesso " name="sesso" onkeyup='checkSex' required>
+      <input type="text" placeholder="inserire sesso " name="sesso" id='sesso' onkeyup='checkSex()' required>
       </p>
       <!--password-->
 
