--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -15,6 +15,8 @@
         });
         </script>
     -->
+    
+    <button type="button" onclick="runQuery()">RUN</button>
 
     {{> main-listing}}
     {{> main-listing}}
