Aggiunta interfaccia con db lato server Mancante interfaccia con il client

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -16,7 +16,7 @@
         </script>
     -->
     
-    <button type="button" onclick="runQuery()">RUN</button>
+    {{!-- <button type="button" onclick="loadMainListing()">RUN</button> --}}
 
     {{> main-listing}}
     {{> main-listing}}
