--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
     <script type="application/javascript" src="js/bootstrap.min.js"></script>
     <script type="application/javascript" src="js/bootstrap.bundle.min.js"></script>
     <script type="application/javascript" src="js/{{js}}"></script>
-    <script type="application/javascript" src="js/dbUtils.js"></script>
+    {{!-- <script type="module" src="js/dbUtils.js"></script> --}}
 
     <title>{{title}}</title>
 </head>
