--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,6 @@
 <!-- Body della main page -->
 <body>
+    <!-- Includi l'header -->
     {{> header}}
 
     <!-- Può essere utile fare il fade-in dei blocchi evento
@@ -15,12 +16,12 @@
         });
         </script>
     -->
-    
-    {{!-- <button type="button" onclick="loadMainListing()">RUN</button> --}}
 
-    {{> main-listing}}
-    {{> main-listing}}
+    <!-- Per ogni elemento della query crea un nuovo elemento -->
+    {{#each mainList}}
+        {{> main-listing}}
+    {{/each}}
 
-
+    <!-- Includi il footer -->
     {{> footer}}
 </body>
