Aggiunta funzionalita di fadein/out negli elementi Aggiunta libreria per JQuery

--- a/views/partials/main-listing.handlebars
+++ b/views/partials/main-listing.handlebars
@@ -4,9 +4,9 @@
     <p class="lead">Posti disponibili: {{postidisponibili}}</p>
     <hr class="my-1">
     <p>{{descrizione}}.</p>
-    <p class="lead">
+    <p class="lead buttons-par">
         <a href="#" class="px-1">
-            <button class="btn btn-info btn-lg" onclick="info('{{dataora}}')">Maggiori informazioni</button>
+            <button class="btn btn-info btn-lg" onclick="info('{{id}}')">Maggiori informazioni</button>
         </a>
         <a href="#" class="">
             <button class="btn btn-prenota btn-lg" onclick="prenota({{id}})">Prenota</button>
