--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,19 +3,20 @@
     <!-- Includi l'header -->
     {{> header}}
 
-    <!-- Può essere utile fare il fade-in dei blocchi evento
+    <!-- Può essere utile fare il fade-in dei blocchi evento-->
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script>
+    <script>
         $(document).ready(function(){
-            $("button").click(function(){
-                $("#div1").fadeIn();
-                $("#div2").fadeIn("slow");
-                $("#div3").fadeIn(3000);
+            $(".listing").fadeIn(1000);
+
+            $(".listing").hover(function(){
+                $(".buttons-par", this).fadeIn();
+            }, function(){
+                $(".buttons-par", this).fadeOut();
             });
         });
-        </script>
-    -->
+    </script>
+    
 
     <!-- Per ogni elemento della query crea un nuovo elemento -->
     {{#each mainList}}
