--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,6 +11,7 @@
 
     <script type="application/javascript" src="js/bootstrap.min.js"></script>
     <script type="application/javascript" src="js/bootstrap.bundle.min.js"></script>
+    <script type="application/javascript" src="js/jquery-3.6.0.min.js"></script>
     <script type="application/javascript" src="js/{{js}}"></script>
     <script type="application/javascript" src="js/dbUtils.js"></script>
 
