Risolto errore nella tabella Evento

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -7,12 +7,12 @@
 
     <script>
         $(document).ready(function(){
-            $(".listing").fadeIn(1000);
+            $(".listing").fadeIn(1500);
 
             $(".listing").hover(function(){
-                $(".buttons-par", this).fadeIn();
+                $(".buttons-par", this).fadeIn("fast");
             }, function(){
-                $(".buttons-par", this).fadeOut();
+                $(".buttons-par", this).fadeOut("fast");
             });
         });
     </script>
