--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -13,12 +13,63 @@ CREATE TABLE Utente(
 );
 -->
 
-<!-- Button to open the modal -->
+<!-- Button to open the modal --
 <button onclick="document.getElementById('id01').style.display='block'">Sign Up</button>
 
-<!-- The Modal (contains the Sign Up form) -->
+<!-- The Modal (contains the Sign Up form) --
 <div id="id01" class="modal">
   <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal"></span>
+  <form>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="inputEmail4">Email</label>
+        <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+      </div>
+      <div class="form-group col-md-6">
+        <label for="inputPassword4">Password</label>
+        <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="inputAddress">Address</label>
+      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+    </div>
+    <div class="form-group">
+      <label for="inputAddress2">Address 2</label>
+      <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="inputCity">City</label>
+        <input type="text" class="form-control" id="inputCity">
+      </div>
+      <div class="form-group col-md-4">
+        <label for="inputState">State</label>
+        <select id="inputState" class="form-control">
+          <option selected>Choose...</option>
+          <option>...</option>
+        </select>
+      </div>
+      <div class="form-group col-md-2">
+        <label for="inputZip">Zip</label>
+        <input type="text" class="form-control" id="inputZip">
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="gridCheck">
+        <label class="form-check-label" for="gridCheck">
+          Check me out
+        </label>
+      </div>
+    </div>
+    <button type="submit" class="btn btn-primary">Sign in</button>
+  </form>
+
+</div>
+-->
+
+<!--
   <form class="modal-content" action="/action_page.php">
     <div class="container">
       <h1>Sign Up</h1>
@@ -27,7 +78,7 @@ CREATE TABLE Utente(
 
       <label for="email"><b>Email</b></label>
       <input type="text" placeholder="inserire email" name="email" required>
-      <!--problema di visualizzazione per type email su opera gx, da verificare  -->
+      <!--problema di visualizzazione per type email su opera gx, da verificare  --
 
       <label for="name"><b>nome</b></label>
       <input type="text" placeholder="inserire nome" name="nome" required>
@@ -38,13 +89,13 @@ CREATE TABLE Utente(
       <label for="dataNascita"><b>Data di nascita</b></label>
       <input type="date" placeholder="inserire data" name="dataNascita" required>
        
-       <!--sesso-->
+       <!--sesso--
 
       <p>
       <label for="sesso"><b>Sesso</b></label>
       <input type="text" placeholder="inserire sesso " name="sesso" id='sesso' onkeyup='checkSex()' required>
       </p>
-      <!--password-->
+      <!--password--
 
       <p>
         <label for="psw"><b>Password</b></label>
@@ -55,7 +106,7 @@ CREATE TABLE Utente(
         </label>
       </p>
 
-      <!--password repeat-->
+      <!--password repeat--
       <p>
       <label for="psw-repeat"><b>Repeat Password</b></label>
       <input type="password" placeholder="ripetere Password" name="psw-repeat" id="password_repeat" onkeyup='check();'
@@ -83,4 +134,255 @@ CREATE TABLE Utente(
     </div>
   </form>
 
-</div>
+  --
+
+<form>
+  <div class="form-row">
+    <div class="col">
+      <label for="email"><b>Email</b></label>
+      <input type="text" class="form-control" placeholder="inserire email" id="email" required>
+    </div>
+
+    <div class="col">
+      <label for="password"><b>Password</b></label>
+      <input type="text" class="form-control" placeholder="inserire email" id="email" required>
+    </div>
+
+  </div>
+</form>
+
+-->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+  <title>Bootstrap Sign up Form with Icons</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <style>
+    body {
+      color: #fff;
+      background: #19aa8d;
+      font-family: 'Roboto', sans-serif;
+    }
+
+    .form-control,
+    .form-control:focus,
+    .input-group-addon {
+      border-color: #e1e1e1;
+    }
+
+    .form-control,
+    .btn {
+      border-radius: 3px;
+    }
+
+    .signup-form {
+      width: 390px;
+      margin: 0 auto;
+      padding: 30px 0;
+    }
+
+    .signup-form form {
+      color: #999;
+      border-radius: 3px;
+      margin-bottom: 15px;
+      background: #fff;
+      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+      padding: 30px;
+    }
+
+    .signup-form h2 {
+      color: #333;
+      font-weight: bold;
+      margin-top: 0;
+    }
+
+    .signup-form hr {
+      margin: 0 -30px 20px;
+    }
+
+    .signup-form .form-group {
+      margin-bottom: 20px;
+    }
+
+    .signup-form label {
+      font-weight: normal;
+      font-size: 13px;
+    }
+
+    .signup-form .form-control {
+      min-height: 38px;
+      box-shadow: none !important;
+    }
+
+    .signup-form .input-group-addon {
+      max-width: 42px;
+      text-align: center;
+    }
+
+    .signup-form input[type="checkbox"] {
+      margin-top: 2px;
+    }
+
+    .signup-form .btn {
+      font-size: 16px;
+      font-weight: bold;
+      background: #19aa8d;
+      border: none;
+      min-width: 140px;
+    }
+
+    .signup-form .btn:hover,
+    .signup-form .btn:focus {
+      background: #179b81;
+      outline: none;
+    }
+
+    .signup-form a {
+      color: #fff;
+      text-decoration: underline;
+    }
+
+    .signup-form a:hover {
+      text-decoration: none;
+    }
+
+    .signup-form form a {
+      color: #19aa8d;
+      text-decoration: none;
+    }
+
+    .signup-form form a:hover {
+      text-decoration: underline;
+    }
+
+    .signup-form .fa {
+      font-size: 21px;
+    }
+
+    .signup-form .fa-paper-plane {
+      font-size: 18px;
+    }
+
+    .signup-form .fa-check {
+      color: #fff;
+      left: 17px;
+      top: 18px;
+      font-size: 7px;
+      position: absolute;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="signup-form">
+    <form action="/examples/actions/confirmation.php" method="post">
+      <h2>Sign Up</h2>
+      <p>Compilare il form per creare un nuovo account!</p>
+      <hr>
+      <!-- email-->
+      <div class="form-group">
+        <div class="input-group">
+          <span class="input-group-addon"><i class="fa fa-paper-plane"></i></span>
+          <input type="email" class="form-control" name="email" placeholder="Email " required="required">
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="row">
+          <div class="col-xs-6"><input type="text" class="form-control" name="nome" placeholder="Nome" required="required"></div>
+          <div class="col-xs-6"><input type="text" class="form-control" name="cognome" placeholder="Cognome" required="required"></div>
+        </div>
+      </div>
+
+
+      <div class="form-group">
+        <label for ="data"<b>data di nascita</b></label>
+        <input type="date" id="data" name="data">
+      </div>
+      <div class="form-group">
+        <form class="form-inline">
+          <label class="my-1 mr-2" for="sesso">sesso</label>
+          <select class="sesso" id="sesso">
+            <option selected>Choose...</option>
+            <option value="M">maschio</option>
+            <option value="F">femmina</option>
+            <option value="NB">non binario</option>
+            <option value="U">altro</option>
+
+          </select>
+      
+      </div>
+      <!--
+      <!--nome--
+      <div class="form-group">
+        <div class="input-group">
+          <span class="input-group-addon"><i class="fa fa-user"></i></span>
+          <input type="text" class="form-control" name="nome" placeholder="nome" required="required">
+        </div>
+      </div>
+-------------------------------------------------------------------------------------------------
+      <!--cognome--
+      <div class="form-group">
+        <div class="input-group">
+          <span class="input-group-addon"><i class="fa fa-user"></i></span>
+          <input type="text" class="form-control" name="cognome" placeholder="cognome" required="required">         
+        </div>
+      </div>
+
+      -->
+
+      <!-- password-->
+
+      <div class="form-group">
+        <div class="input-group">
+          <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+          <input type="password" class="form-control" name="password" placeholder="Password" id="password" onkeyup='checkLgh();' required="required">
+        </div>
+    
+
+      
+        <input class="form-check-input" type="checkbox" value=""  name="showPsw" id="showPassword"  onclick="funshowPsw()" >
+        <label class="form-check-label" for="flexCheckDefault"> mostra
+        </label>
+
+      </div>
+
+      <!--password repeat-->
+
+      <div class="form-group">
+        <div class="input-group">
+          <span class="input-group-addon">
+            <i class="fa fa-lock"></i>
+            <i class="fa fa-check"></i>
+          </span>
+          <input type="password" class="form-control" name="confirm_password" placeholder="Confirm Password" id="password_repeat"
+            onkeyup='check();' required="required">
+          </div>
+          <input class="form-check-input" type="checkbox" value="" name="showPsw2" onclick="funshowPsw2()">
+          <label class="form-check-label" for="flexCheckDefault"> mostra
+          </label>
+          
+          </div>
+      <div class="form-group">
+        <span id='message'></b></span>
+      </div>
+      <div class="form-group">
+        <label class="checkbox-inline"><input type="checkbox" required="required"> I accept the <a href="#">Terms of
+            Use</a> &amp; <a href="#">Privacy Policy</a></label>
+      </div>
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary btn-lg">Sign Up</button>
+      </div>
+      </form>
+      <div class="text-center">Already have an account? <a href="login">Login here</a></div>
+      </div>
+      </body>
+      
+      </html>
