--- a/public/css/style-signup.css
+++ b/public/css/style-signup.css
@@ -1,8 +1,3 @@
-body {
-  color: #fff;
-  background: #19aa8d;
-  font-family: 'Roboto', sans-serif;
-}
 
 .form-control,
 .form-control:focus,
@@ -11,8 +6,8 @@ body {
 }
 
 .form-control,
-.btn {
-  border-radius: 3px;
+.btn, .form-group.form-control {
+  border-radius: 4px;
 }
 
 .signup-form {
