--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -154,7 +154,13 @@ CREATE TABLE Utente(
 -->
 <!DOCTYPE html>
 <html lang="en">
-
+<style>
+body {
+  color: #fff;
+  background: #19aa8d;
+  font-family: 'Roboto', sans-serif;
+}
+</style>
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -190,13 +196,12 @@ CREATE TABLE Utente(
 
       <div class="form-group">
         <label for ="data"<b>data di nascita</b></label>
-        <input type="date" id="data" name="data">
+        <input type="date" id="data" name="data" required>
       </div>
       <div class="form-group">
-        <form class="form-inline">
+        <form class="form-select">
           <label class="my-1 mr-2" for="sesso">sesso</label>
-          <select class="sesso" id="sesso">
-            <option selected>Choose...</option>
+          <select class="sesso" id="sesso" required>
             <option value="M">maschio</option>
             <option value="F">femmina</option>
             <option value="NB">non binario</option>
