--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -85,8 +85,8 @@
                 <!--password repeat-->
 
                 <div class="form-outline mb-4">
-                  <div class="input-group">
-                    <span class="input-group-addon">
+                  <div class="form-group">
+                    <span class="form-group-addon">
                       <i class="fa fa-lock"></i>
                       <i class="fa fa-check"></i>
                     </span>
