--- a/public/css/style-signin.css
+++ b/public/css/style-signin.css
@@ -1,3 +1,5 @@
+/*
+
 :root {
   --theme-color: rgba(24, 192, 46, 0.534);
 }
@@ -46,4 +48,20 @@ body {
   background-color: var(--theme-color);
   color: black;
   border-color: transparent;
+}
+
+*/
+
+.gradient-custom-3 {
+  background: linear-gradient(to right, rgba(132, 250, 176, 0.5), rgba(143, 211, 244, 0.5))
+}
+.gradient-custom-4 {
+  background: linear-gradient(to right, rgba(132, 250, 176, 1), rgba(143, 211, 244, 1))
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
