--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -27,7 +27,7 @@
                 <!-- Data di nascita -->
                 <div class="form-outline mb-4">
                   <label for="data" <b>Data di nascita</b></label>
-                  <input type="date" id="data" name="data" required>
+                  <input type="date" id="data" name="data" onchange="checkData()">
                 </div>
 
                 <!-- Sesso -->
