aggiornamento funzioni di signup e avvio di login

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -28,15 +28,16 @@
                         
                         <div class="card-body p-4">
                             
-                            <h2 class="text-uppercase text-center mb-4">Login</h2>
+                            
 
                             <!-- Form -->
                             <form action="/loginValid" method="post">
-                                <a href="/">
+                                <a href="/" class="py-2">
                                     <!-- Aspetto dell'immagine originale: 3.66:1 -->
-                                    <img src="img/icon-transparent.png" alt="home" width="250" height="68" />
+                                    <img src="img/icon-transparent.png" alt="home" width="250" height="68"  />
                                 </a>
-                                <p>Inserisci i dati per accedere al tuo account!</p>
+
+                                <p class="py-2"> Inserisci i dati per accedere al tuo account! </p>
                                 <hr>
 
 
