--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -6,14 +6,17 @@
         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
           <div class="card" style="border-radius: 15px;">
             <div class="card-body p-5">
-              <h2 class="text-uppercase text-center mb-5">Crea un account</h2>
+              <a href="/">
+                <!-- Aspetto dell'immagine originale: 3.66:1 -->
+                <img src="img/icon-transparent.png" alt="home" width="250" height="68" />
+              </a>
 
               <!-- Form -->
               <form onsubmit="return validaForm()" action="/signupValid" method="post">
                 <h2>Registrati</h2>
                 <p>Compilare il form per creare un nuovo account!</p>
                 <hr>
-                
+
                 <!-- Nome e cognome -->
                 <div class="form-outline mb-4">
                   <div class="row">
@@ -27,7 +30,7 @@
                 <!-- Data di nascita -->
                 <div class="form-outline mb-4">
                   <label for="data" <b>Data di nascita</b></label>
-                  <input type="date" id="data" name="data" onchange="checkData()">
+                  <input type="date" id="data" name="data" onkeyup="checkData()">
                 </div>
 
                 <!-- Sesso -->
@@ -75,13 +78,13 @@
                   <input class="form-check-input" type="checkbox" name="showPsw2" onclick="showPwd2()">
                   <label class="form-check-label" for="flexCheckDefault"> mostra</label>
 
-                <!-- Termini e condizioni -->
+                  <!-- Termini e condizioni -->
                 </div>
                 <div class="form-outline mb-4">
                   <span id='message'></b></span>
                 </div>
                 <div class="form-outline mb-4">
-                  <label class="checkbox-inline"><input type="checkbox" required="required"> Accetto i 
+                  <label class="checkbox-inline"><input type="checkbox" required="required"> Accetto i
                     <a href="#">Termini d'uso e condizioni </a>
                   </label>
                 </div>
